--- a/multimarkdown/Makefile
+++ b/multimarkdown/Makefile
@@ -1,8 +1,9 @@
 # $OpenBSD$
 
 V =		4.6
-COMMENT =	MultiMarkdown Reimplementation in C
-DISTNAME =	MultiMarkdown4-${V}
+COMMENT =	marked-up plain text to formatted document converter
+DISTNAME =	${GH_PROJECT}-${V}
+PKGNAME =	multimarkdown-${V}
 CATEGORIES =	textproc
 
 GH_ACCOUNT =	fletcher
@@ -10,18 +11,22 @@ GH_PROJECT =	MultiMarkdown-4
 GH_TAGNAME =	${V}
 GH_COMMIT =	ad9595beb6f9380ad18f1fd07919a16a6d14fc46
 
-HOMEPAGE =	http://fletcherpenney.net/mmd
+HOMEPAGE =	http://fletcherpenney.net/multimarkdown/
 MAINTAINER =	Sean Levy <attila@stalphonsos.com>
 
-# MIT
-PERMIT_PACKAGE_CDROM =	Yes
+CFLAGS =	-Wall -g -O3 -include GLibFacade.h -DHAVE_ARC4RANDOM
 
-USE_GMAKE =	Yes
+# Dual licensed: MIT and GPLv2+
+PERMIT_PACKAGE_CDROM =	Yes
 
 WANTLIB += c
 
 BUILD_DEPENDS =	devel/greg
 
+USE_GMAKE =	Yes
+ALL_TARGET =	ALL
+
+# Test files aren't included in distfile.
 NO_TEST =	Yes
 
 do-install:
