Works!  Tor Browser 4.0 builds and works on amd64 this way.

--- a/tor-browser/Makefile
+++ b/tor-browser/Makefile
@@ -10,6 +10,8 @@ GH_PROJECT =	torb
 GH_TAGNAME =	v4.0-esr31.4.0
 GH_COMMIT =	323bfe0932391871d27f176ca862993622e8ef2c
 
+DISTNAME =	${GH_PROJECT}-${GH_TAGNAME}
+
 BROWSER_PROJECT =	tor-browser
 BROWSER_NAME =		${BROWSER_PROJECT}
 BROWSER_VERSION = 	4.0
