--- a/torbutton/Makefile
+++ b/torbutton/Makefile
@@ -4,11 +4,11 @@ TBB_DISTNAME =		torbutton
 TBB_DISTVERS =		1.9.0.0
 COMMENT =		torbutton Firefox Add on: Part of Tor Browser Bundle
 
-TBB_MAKE_COMMAND =	./makexpi.sh
-TBB_BUILD_SUBDIR =	pkg
-
 MODULES =		www/tbb
 
 GUID =			torbutton@torproject.org
+
+do-build:
+	cd ${WRKSRC} && ./makexpi.sh
 
 .include <bsd.port.mk>
