Duh!  Forgot multimarkdown/Makefile

--- a/multimarkdown/Makefile
+++ b/multimarkdown/Makefile
@@ -23,7 +23,8 @@ BUILD_DEPENDS =	devel/greg
 
 USE_GMAKE =	Yes
 ALL_TARGET =	ALL
-MAKE_FLAGS =	CFLAGS="${CFLAGS} -include GLibFacade.h -DHAVE_ARC4RANDOM"
+MAKE_FLAGS =	CFLAGS="${CFLAGS} -include GLibFacade.h -DHAVE_ARC4RANDOM" \
+		GREG=/usr/local/bin/greg
 
 # Test files aren't included in distfile.
 NO_TEST =	Yes
