New naming scheme:
firefox-addon port module -> mozilla-addon
tbb port module -> tbb-addon

The noscript port is split into tbb-noscript and noscript
instead of flavoring because you can't have both flavors installed
at once and you might want to in this case.  The former
depends on www/tbb-addon and the latter on www/mozilla-addon

torbutton, tor-launcher: change to use new www/tbb-addon module.

--- a/tbb-noscript/Makefile
+++ b/tbb-noscript/Makefile
@@ -2,12 +2,12 @@
 
 MOZILLA_ADDON_NAME =	noscript
 V =			2.6.9.18
-COMMENT =		Flexible JS Blocker for Firefox
+COMMENT =		Flexible JS Blocker for Firefox (Tor Browser variant)
 MOZILLA_ADDON_XPI =	Yes
 MAINTAINER =		sean levy <attila@stalphonsos.com>
 HOMEPAGE =		http://noscript.net
 MASTER_SITES =		https://secure.informaction.com/download/releases/
-MODULES =		www/mozilla-addon
+MODULES =		www/tbb-addon
 # GPLv2+
 PERMIT_PACKAGE_CDROM =	Yes
 GUID =			{73a6fe31-595d-460b-a920-fcc0f8843232}
