--- a/torbutton/Makefile
+++ b/torbutton/Makefile
@@ -4,7 +4,7 @@ TBB_DISTNAME =		torbutton
 TBB_DISTVERS =		1.9.0.0
 COMMENT =		torbutton Firefox Add on: Part of Tor Browser Bundle
 
-MODULES =		www/tbb
+MODULES =		www/tbb-addon
 
 GUID =			torbutton@torproject.org
 
